--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ nav{
 
 .navbar-dark .navbar-nav .nav-link:hover{
   border-bottom: 3px solid #F0A0A5;
-  color: #3E293D;
+  color: #3E293D; 
 
 }
 .navbar-dark .navbar-nav .nav-link.active,.navbar-dark .navbar-nav .nav-link:focus{
@@ -51,8 +51,12 @@ nav{
   width: 500px;
   height: 350px;
   transition: transform 0.5s;
-  
 }
+
+.cookie-img {
+  object-fit:cover;
+}
+
 .paper{
   
   position: absolute;
@@ -130,9 +134,6 @@ nav{
   padding-right:30px;
 }
 
-
-
-
 .home-head{
   margin-top: -40%;
   font-weight: bold;
@@ -196,11 +197,43 @@ i{
 }
 
 footer.container {
-  padding-top: 2em;
-  background-color: #f6db8e;
+  padding: 2em;
+  background-color: /*#f5dc8e*/ rgba(246, 219, 142, 1);
   margin-top: 8em;
   max-width: 100% !important;
   height: 33vh;
+
 }
 
+a.ft-nav-item {
+  text-decoration: none !important;
+  color: #3E293D;
+  font-weight: 600;
+}
 
+.ft-nav-title {
+  color: #3E293D;
+  font-weight: 600;
+
+}
+
+.form-group {
+  width: 50%;
+  float: left;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
+.form-control {
+  background-color:#f5dc8e;
+  border:#3E293D 1px solid;
+}
+
+button.btn.btn-primary.mb-2 {
+  float: left;
+  margin-left: 15px;
+  background-color: #3E293D;
+  color: #f5dc8e;
+  border-radius: 15px;
+  border: none;
+}
