--- a/style.css
+++ b/style.css
@@ -284,3 +284,61 @@ hr.clearfix.w-100.d-md-none.pb-3 {
 }
 
 
+
+
+
+/* Contact */
+
+.title-contact {
+  color:#3E293D;
+  margin-top: 3%;
+  text-align: center;
+  margin-bottom: 2%;}
+
+.form-contact {
+  background-color: #F7C9C9;
+  border: 2px solid grey;
+  box-shadow: 1px 1px 3px grey;
+  border-radius: 25px;
+  width: 40%; padding-top:40px;
+  margin: 0 auto;
+  margin-bottom: 5% ;}
+
+.form-contact textarea {
+  width: 70%; height:15vh;
+  margin-left: 15%;
+  border: none;
+  box-shadow: 1px 1px 4px grey;}
+
+.form-contact input {
+  width: 70%; padding: 10px;
+  background: white;
+  margin-left: 15%;
+  border: none;
+  box-shadow: 1px 1px 4px grey;}
+
+.btn-contact {
+  width: 28%; padding: 10px;
+  background-color: #3E293D;
+  color:#F3C591;
+  border:none; 
+  border-radius: 5%;
+  margin-top: 3%;
+  margin-bottom: 5%;
+  margin-left: 37%;
+  box-shadow: 1px 1px 4px grey;}
+
+.form-contact label {
+  color:#3E293D;
+  margin-left: 15%;
+  margin-top:20px;}
+
+.form-contact span {
+  color: red;
+  margin-left: 15%;
+  width: 70%;  
+  display: block;}
+
+.title-result {
+  text-align: center;
+  }
